feat: create users part 2
